<resources>
    <string name="app_name" translatable="false">LearnAble</string>
    <string name="app_logo" translatable="false">LearnAble Logo</string>
    <string name="notifications">Notifikasi</string>
    <string name="no_notifications">Tidak ada notifikasi</string>
    <string name="system">Sistem</string>
    <string name="lesson_completion_message">Kamu berhasil menyelesaikan pelajaran %1$s jenjang %2$s dengan materi %3$s - subbab %3$s</string>
    <string name="title_daily_reminder">Waktunya Belajar! 📚</string>
    <string name="desc_daily_reminder">Kamu belum belajar hari ini. Yuk, mulai belajar sekarang!</string>
    <string name="title_completion_subbab">Selamat! 🎉</string>
    <string name="content_completion_subbab">Kamu telah menyelesaikan: %1$s</string>
    <string name="desc_completion_subbab">Kamu telah berhasil menyelesaikan subbab %1$s dari materi %2$s. Terus semangat belajar!</string>
    <string name="web_client_id" translatable="false">854871060006-vripgl49aajbp30kmp69fjnoen3hsi25.apps.googleusercontent.com</string>
    <string name="accessibility">Aksesibilitas</string>
    <string name="text_size">Ukuran Teks</string>
    <string name="small_text">Kecil</string>
    <string name="medium_text">Sedang</string>
    <string name="large_text">Besar</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="nisn" translatable="false">NISN (10 digit)</string>
    <string name="nip" translatable="false">NIP</string>
    <string name="pick_role">Pilih Peran</string>
    <string name="sign_up">Daftar</string>
    <string name="or">ATAU</string>
    <string name="sign_up_with_google">Daftar dengan Google</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="login_information1">Silakan Masuk</string>
    <string name="login_information2">Isi alamat email dan kata sandi untuk masuk</string>
    <string name="signup_information1">Silakan Daftar</string>
    <string name="signup_information2">Silahkan daftar dengan mengisi beberapa informasi dengan benar</string>
    <string name="create_new_account">Buat Akun</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="forget_password">Lupa Kata Sandi?</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="dont_have_account">Belum punya akun? Silakan</string>
    <string name="reset_password">Link reset password telah dikirim ke email Anda</string>
    <string name="header_reset_password">Atur Ulang Password</string>
    <string name="description_reset_password">Masukkan email Anda untuk menerima link reset password</string>
    <string name="remember_password">Ingat kata sandi? Silakan</string>
    <string name="send">Kirim</string>
    <string name="description_new_password">Silahkan isi kata sandi yang baru untuk akun anda</string>
    <string name="reset">Mengatur Ulang</string>
    <string name="logout">Keluar</string>
    <string name="greeting">Hai %1$s!</string>
    <string name="question_learn">Ingin belajar apa hari ini?</string>
    <string name="study_calendar">Kalender Belajar</string>
    <string name="see_progress">Yuk lihat kemajuan belajarmu!</string>
    <string name="your_progress">Kemajuan Belajarmu</string>
    <string name="recommend_video">Rekomendasi Video Materi</string>
    <string name="subject">Mata Pelajaran</string>
    <string name="choose_level">Pilih Jenjang</string>
    <string name="fail_get_subjects">Gagal memuat pelajaran</string>
    <string name="fail_get_progress">Gagal memuat progress</string>
    <string name="all_bab">Semua Bab</string>
    <string name="all_subbab">Semua Subbab</string>
    <string name="search_hint_subject">Cari topik yang ingin dipelajari</string>
    <string name="quiz">Kuis</string>
    <string name="video" translatable="false">Video</string>
    <string name="material">Materi</string>
    <string name="title_subject_screen">Mau belajar apa hari ini?</string>
    <string name="back">Kembali</string>
    <string name="next">Selanjutnya</string>
    <string name="end_quiz">Akhiri kuis</string>
    <string name="your_grade">Nilai kamu %1$d</string>
    <string name="rework">Kerjakan Ulang</string>
    <string name="see_explanation">Lihat Pembahasan</string>
    <string name="question_explanation">Pembahasan Soal:</string>
    <string name="right_answer">Jawaban yang benar adalah %1$s</string>
    <string name="time_answer">Waktu Pengerjaan</string>
    <string name="time_elapsed">Waktu berjalan: %1$s</string>
    <string name="wrong_answer">Jawaban Salah</string>
    <string name="correct_answer">Jawaban Benar</string>
    <string name="pending_review">Belum dikoreksi</string>
    <string name="quiz_result">Hasil Kuis</string>
    <string name="answer_wrong">Sayang banget, jawaban kamu salah</string>
    <string name="answer_correct">Selamat, jawaban kamu benar!</string>
    <string name="motivation1">Mantapp! Pertahankan prestasimu!</string>
    <string name="motivation2">Bagus! Sedikit lagi nih, yuk semangat!</string>
    <string name="motivation3">Jangan menyerah! Coba lagi dan tingkatkan prestasimu!</string>
    <string name="quiz_essay_answer_hint">Tulis jawaban kamu di sini</string>
    <string name="essay_not_graded">Essay belum dikoreksi</string>
    <string name="more_title">Lainnya</string>
    <string name="my_account">Akun saya</string>
    <string name="saved_material">Materi disimpan</string>
    <string name="settings">Pengaturan</string>
    <string name="about_us">Tentang Kami</string>
    <string name="feedback">Kritik &amp; Saran</string>
    <string name="logout_menu">Keluar</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="change_profile">Ubah profil</string>
    <string name="address">Alamat</string>
    <string name="city">Kota</string>
    <string name="province">Provinsi</string>
    <string name="school_detail">Detail Sekolah</string>
    <string name="grade">Kelas</string>
    <string name="contact_parent">Kontak Orangtua/Wali</string>
    <string name="parent_name">Nama Orangtua/Wali</string>
    <string name="parent_number">Nomor HP Orangtua/Wali</string>
    <string name="change_profile_title">Ubah Profil</string>
    <string name="change_photo_profile">Ubah foto profil</string>
    <string name="detail_profil" translatable="false">Detail Profil</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="phone_id_format" translatable="false">(+62) %1$s</string>
    <string name="must_be_filled">Wajib diisi ya</string>
    <string name="gender_male">Laki-laki</string>
    <string name="gender_female">Perempuan</string>
    <string name="duration_video" translatable="false">%1$s/%2$s</string>
    <string name="admin_dashboard_title">Admin Dashboard</string>
    <string name="application_detail">Detail Pemohon</string>
    <string name="application_infromation">Informasi Pemohon</string>
    <string name="application_user">Permohonan Persetujuan Akun</string>
    <string name="search_byname">Cari bedasarkan nama</string>
    <string name="role">Peran</string>
    <string name="detail" translatable="false">Detail</string>
    <string name="created_application">Permohonan dibuat</string>
    <string name="loading">Memuat …</string>
    <string name="not_fill_yet">Belum diisi …</string>
    <string name="error_loading_data">Gagal memuat data</string>
    <string name="number">Nomor HP</string>
    <string name="confirmation_approval_title">Setujui Permohonan</string>
    <string name="confirmation_approval_desc">Apakah kamu yakin untuk setujui permohonan ini?</string>
    <string name="approval_success_title">Permohonan berhasil disetujui!</string>
    <string name="approval_success_desc">Kamu telah setujui permohonan ini</string>
    <string name="back_to_homepage">Kembali ke Halaman Utama</string>
    <string name="all_role">Semua Peran</string>
    <string name="all_status">Semua Status</string>
    <string name="status" translatable="false">Status</string>
    <string name="sort">Sortir</string>
    <string name="approve">Setujui</string>
    <string name="reject">Tolak</string>
    <string name="approved">Disetujui</string>
    <string name="rejected">Ditolak</string>
    <string name="fail_find_user">Gagal mencari user</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="date">Tanggal</string>
    <string name="name">Nama</string>
    <string name="sort_order">Urutan Sortir</string>
    <string name="ascending">Naik</string>
    <string name="descending">Turun</string>
    <string name="save">Simpan</string>
    <string name="dashboard_teacher_toolbar">Dashboard Guru</string>
    <string name="search_bylesson">Cari berdasarkan nama Bab</string>
    <string name="search_bysubbab">Cari berdasarkan nama Subbab</string>
    <string name="add_lesson">Tambah Bab</string>
    <string name="upload_cover"><![CDATA[<font color=\'#FF0000\'>*</font> Unggah Gambar Depan]]></string>
    <string name="upload_picture">Unggah Gambar</string>
    <string name="name_lesson"><![CDATA[<font color=\'#FF0000\'>*</font>Nama Bab]]></string>
    <string name="fill_name_lesson">Isi Nama Bab</string>
    <string name="empty_lesson_title">Belum ada Bab</string>
    <string name="empty_lesson_desc">Tambahkan Bab baru dengan menekan tombol \"Tambah Bab\" di atas</string>
    <string name="school_level_crud"><![CDATA[<font color=\'#FF0000\'>*</font>Jenjang Pendidikan]]></string>
    <string name="choose_school_level">Pilih Jenjang</string>
    <string name="subject_crud"><![CDATA[<font color=\'#FF0000\'>*</font>Mata Pelajaran]]></string>
    <string name="choose_subject">Pilih Mata Pelajaran</string>
    <string name="add_subbab">Tambah Subbab</string>
    <string name="edit_subbab">Edit Subbab</string>
    <string name="name_subbab"><![CDATA[<font color=\'#FF0000\'>*</font>Nama Subbab]]></string>
    <string name="fill_name_subbab">Isi Nama Subbab</string>
    <string name="empty_subbab_title">Belum ada Subbab</string>
    <string name="empty_subbab_desc">Tambahkan subbab baru dengan menekan tombol \"Tambah Subbab\" di atas</string>
    <string name="choose_bab"><![CDATA[<font color=\'#FF0000\'>*</font>Pilih Bab]]></string>
    <string name="desc_shoose_bab">Pilih Bab</string>
    <string name="learning_material"><![CDATA[<font color=\'#FF0000\'>*</font>Materi Pembelajaran]]></string>
    <string name="upload_material">Unggah Materi</string>
    <string name="learning_video"><![CDATA[<font color=\'#FF0000\'>*</font>Video Pembelajaran]]></string>
    <string name="upload_video">Unggah Video</string>
    <string name="subtitle" translatable="false">Subtitle</string>
    <string name="upload_subtitle">Unggah Subtitle</string>
    <string name="quiz_crud"><![CDATA[<font color=\'#FF0000\'>*</font>Kuis]]></string>
    <string name="add_quiz">Tambah Kuis</string>
    <string name="edit_quiz">Edit Kuis</string>
    <string name="passing_score"><![CDATA[<font color=\'#FF0000\'>*</font>Nilai Kelulusan]]></string>
    <string name="fill_passing_score">Isi Nilai Kelulusan</string>
    <string name="multiple_choice">Pilihan Ganda</string>
    <string name="essay">Esai</string>
    <string name="fill_question">Isi pertanyaan</string>
    <string name="choice_right_answer">Pilih Jawaban Benar</string>
    <string name="add">Tambah</string>
    <string name="option1">Opsi 1</string>
    <string name="option2">Opsi 2</string>
    <string name="option3">Opsi 3</string>
    <string name="option4">Opsi 4</string>
    <string name="note_correct_answer">Catatan : Pilih satu jawaban benar</string>
    <string name="login_credentials_error">Email atau kata sandi salah</string>
    <string name="pic_back">Gambar Kembali</string>
</resources>