<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="46dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="190dp"
            android:layout_height="43dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logo_learnable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/signup_information1"
            android:textColor="@color/grey"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/signup_information2"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:contentDescription="Ilustrasi Login"
            android:src="@drawable/icon_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

        <LinearLayout
            android:id="@+id/studentSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ivLogin">

            <com.adika.learnable.customview.IconEditTextView
                android:id="@+id/etPickRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dropdownEntries="@array/roles"
                app:hintText="@string/pick_role"
                app:iconDrawable="@drawable/ic_role"
                app:isDropdown="true" />

            <com.adika.learnable.customview.IconEditTextView
                android:id="@+id/etNisn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:visibility="gone"
                app:hintText="@string/nisn"
                app:iconDrawable="@drawable/ic_identity" />

            <com.adika.learnable.customview.IconEditTextView
                android:id="@+id/etNip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="number"
                android:visibility="gone"
                app:hintText="@string/nip"
                app:iconDrawable="@drawable/ic_identity" />

            <com.adika.learnable.customview.IconEditTextView
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:hintText="@string/full_name"
                app:iconDrawable="@drawable/ic_user" />

            <com.adika.learnable.customview.IconEditTextView
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                android:visibility="gone"
                app:hintText="@string/email"
                app:iconDrawable="@drawable/ic_email" />

            <TextView
                android:id="@+id/tvSignUpError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/login_credentials_error"
                android:textColor="@color/error"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_button_green"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/studentSection" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>